--- a/src/components/Thumbnail.css
+++ b/src/components/Thumbnail.css
@@ -3,10 +3,32 @@ div.thumbnailImage{
     height: 4rem;    
 }
 div.thumbnail{
-    padding: .75rem;
+    margin: .75rem;
 }
-div.fileName{
+div .fileName{
+    position: relative;
+}
+div .fileName .fileText{
     width: 4rem;
     height: 2rem;
-    overflow : hidden;
+    overflow:hidden;
+}
+div .fileName .tooltiptext {
+    visibility: hidden;
+    width: 6rem;
+    background-color: beige;
+    color:black;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    
+    /* Fade in tooltip - takes 1 second to go from 0% to 100% opac: */
+    opacity: 0;
+    transition: opacity 0.5s;
+    transition-delay: 2s;
+}
+
+div .fileName:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
