--- a/src/components/Thumbnail.css
+++ b/src/components/Thumbnail.css
@@ -3,22 +3,23 @@ div.thumbnailImage{
     height: 4rem;    
 }
 div.thumbnail{
-    margin: .75rem;
-}
-div .fileName{
-    position: relative;
+    margin-top: .75rem;
+    margin-left: .75rem;
+    margin-right: .75rem;
 }
 div .fileName .fileText{
     width: 4rem;
-    height: 2rem;
+    height: 3rem;
     overflow:hidden;
+    font-size: 0.65rem;
+    overflow-wrap: break-word;
 }
 div .fileName .tooltiptext {
     visibility: hidden;
-    width: 6rem;
+    width : 0px;
+    height : 0px;
     background-color: beige;
     color:black;
-    text-align: center;
     position: absolute;
     z-index: 1;
     
@@ -31,4 +32,6 @@ div .fileName .tooltiptext {
 div .fileName:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
+    width : auto;
+    height : auto;
 }
