--- a/src/components/ContentBrowser.css
+++ b/src/components/ContentBrowser.css
@@ -1,3 +1,7 @@
+.react-contextmenu-wrapper{
+    height: 100%;
+  }
+  
 .dropzone{
     height:100%;
     width:auto;
@@ -6,3 +10,67 @@
 .fileInput{
     display:none;
 }
+
+div.fileList{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.Pane{
+    overflow:auto;
+    background-color: darkgray;
+}
+
+.SplitPane{
+    position: relative !important;
+}
+
+.Resizer {
+    background: #000;
+    opacity: .2;
+    z-index: 1;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding;
+    background-clip: padding-box;
+  }
+  
+  .Resizer:hover {
+    -webkit-transition: all 2s ease;
+    transition: all 2s ease;
+  }
+  
+  .Resizer.horizontal {
+    height: 7px;
+    margin: -3px 0;
+    border-top: 3px solid rgba(255, 255, 255, 0);
+    border-bottom: 3px solid rgba(255, 255, 255, 0);
+    cursor: row-resize;
+    width: 100%;
+  }
+  
+  .Resizer.horizontal:hover {
+    border-top: 3px solid rgba(0, 0, 0, 0.5);
+    border-bottom: 3px solid rgba(0, 0, 0, 0.5);
+  }
+  
+  .Resizer.vertical {
+    width: 7px;
+    margin: 0 -3px;
+    border-left: 3px solid rgba(255, 255, 255, 0);
+    border-right: 3px solid rgba(255, 255, 255, 0);
+    cursor: col-resize;
+  }
+  
+  .Resizer.vertical:hover {
+    border-left: 3px solid rgba(0, 0, 0, 0.5);
+    border-right: 3px solid rgba(0, 0, 0, 0.5);
+  }
+  .Resizer.disabled {
+  cursor: not-allowed;
+  }
+  .Resizer.disabled:hover {
+  border-color: transparent;
+  }
