--- a/src/components/Content/ContentList.css
+++ b/src/components/Content/ContentList.css
@@ -5,6 +5,7 @@ ul.contentList {
 ul li.contentType{
     background-color: #333333;
     padding : 0.25rem;
+    cursor: pointer;
 }
 
 ul li.activeType{
