--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 0.7rem 0;
+}
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  height: 0.15rem;
+  cursor: pointer;
+  background: #666666;
+}
+input[type=range]::-webkit-slider-thumb {
+  height: 1.2rem;
+  width: 0.5rem;
+  background: #CCCCCC;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -.6rem;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #999999;
+}
+
