--- a/src/components/MaterialList/MaterialItem.css
+++ b/src/components/MaterialList/MaterialItem.css
@@ -1,21 +1,24 @@
 ul li.materialType{
     background-color: #333333;
     padding : 0.25rem;
+    cursor : pointer;
 }
 
-ul li.activeType{
+ul li.materialActiveType{
     background-color: #666666;
 }
 
+.materialCheck{
+    vertical-align: middle;
+    margin-left:-1.25rem;
+}
+
 .materialLink{
+    margin-left:0.25rem;
     color:#999999;
 }
 
 .materialLink:hover{
     color:#999999;
     text-decoration: none;
-}
-
-.activex{
-    color:blue;
 }
