--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  line-height: 1rem;
   font-size: 0.75rem !important;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -65,3 +66,6 @@ input[type=range]:focus::-webkit-slider-runnable-track {
   background: #999999;
 }
 
+.collapse-border{
+  border-bottom: .05rem solid;
+}
