--- a/src/components/Layers/Layer.css
+++ b/src/components/Layers/Layer.css
@@ -1,11 +1,20 @@
 .layerPreviewImage{
     height:2rem;
     width : 2rem;
-    border : 0.1rem solid rgba(0,0,0,0.125);
+    border : 0.05rem solid;
 }
 
 .layerType{
     background-color: #333333;
     padding : 0.25rem;
-    border : 0.05rem solid rgba(0, 0, 0, 0.125);
+    border : 0.05rem solid;
+}
+
+.layerLink{
+    color:#999999;
+}
+
+.layerLink:hover{
+    color:#999999;
+    text-decoration: none;
 }
