--- a/src/components/Common/ColorPalette.css
+++ b/src/components/Common/ColorPalette.css
@@ -1,3 +1,13 @@
+.colorPicker{
+    width : 100%;
+    height : 0.8rem;
+    border : .05rem solid;
+}
+
+label.pickerName{
+    margin:0
+}
+
 .sketcher{
     position:absolute;
     z-index: 2;
