--- a/src/components/Layers/Layer.css
+++ b/src/components/Layers/Layer.css
@@ -6,8 +6,11 @@
 
 .layerType{
     background-color: #333333;
-    padding : 0.25rem;
     border : 0.05rem solid;
+}
+
+.layerContent{
+    display:inline-flex
 }
 
 .layerLink{
@@ -17,4 +20,10 @@
 .layerLink:hover{
     color:#999999;
     text-decoration: none;
+}
+
+.closeSelectLayer{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
